{
  "version": 4,
  "terraform_version": "1.16.0",
  "serial": 172,
  "lineage": "4be31e04-9fe8-72f2-2759-5c43088bbcdb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ec2_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-cc6ac357abf949a35",
            "arn": "arn:aws:ec2:us-east-1::elastic-ip/eipalloc-cc6ac357abf949a35",
            "domain": "vpc",
            "id": "eipalloc-cc6ac357abf949a35",
            "public_dns": "ec2-54-25-148-239.compute-1.amazonaws.com",
            "public_ip": "54.25.148.239",
            "tags": {
              "Name": "local-ec2-eip-us-east-1a"
            },
            "tags_all": {
              "Name": "local-ec2-eip-us-east-1a"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-dc76c7432e5e17642",
            "arn": "arn:aws:ec2:us-east-1::elastic-ip/eipalloc-dc76c7432e5e17642",
            "domain": "vpc",
            "id": "eipalloc-dc76c7432e5e17642",
            "public_dns": "ec2-54-28-113-125.compute-1.amazonaws.com",
            "public_ip": "54.28.113.125",
            "tags": {
              "Name": "local-ec2-eip-us-east-1b"
            },
            "tags_all": {
              "Name": "local-ec2-eip-us-east-1b"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f02b24005e4aec36",
            "arn": "arn:aws:ec2:us-east-1::instance/i-0d10f131c624e341f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d10f131c624e341f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-b17e534c1281d6143",
            "private_dns": "ip-172-28-0-5.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.28.0.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-e40fb33b2af22b7be",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-28877705",
            "tags": {
              "Name": "local-private-ec2-us-east-1a"
            },
            "tags_all": {
              "Name": "local-private-ec2-us-east-1a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07338041ebebec2e9"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_local",
            "aws_subnet.ec2_private_subnet",
            "aws_vpc.ec2_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f02b24005e4aec36",
            "arn": "arn:aws:ec2:us-east-1::instance/i-c20bad04bc8a75f34",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-c20bad04bc8a75f34",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-2c44c69a0ad81847b",
            "private_dns": "ip-172-28-0-7.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.28.0.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-2fa9259f1b24bd54b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-3b7a1c0f",
            "tags": {
              "Name": "local-private-ec2-us-east-1b"
            },
            "tags_all": {
              "Name": "local-private-ec2-us-east-1b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07338041ebebec2e9"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_local",
            "aws_subnet.ec2_private_subnet",
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f02b24005e4aec36",
            "arn": "arn:aws:ec2:us-east-1::instance/i-db31631a626b23117",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-db31631a626b23117",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-2046fd7e53676656e",
            "private_dns": "ip-172-28-0-6.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.28.0.6",
            "public_dns": "localhost",
            "public_ip": "127.0.0.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-dfc032fe960b173e4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-259cd3e1",
            "tags": {
              "Name": "local-public-ec2-us-east-1a"
            },
            "tags_all": {
              "Name": "local-public-ec2-us-east-1a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-d61437252dafab464"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.ec2_public_subnet",
            "aws_vpc.ec2_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f02b24005e4aec36",
            "arn": "arn:aws:ec2:us-east-1::instance/i-5a1cb0d4a73bd5e20",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-5a1cb0d4a73bd5e20",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-51a497a1485096b60",
            "private_dns": "ip-172-28-0-4.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.28.0.4",
            "public_dns": "localhost",
            "public_ip": "127.0.0.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-ff237f08dc99d3f9a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-b1564341",
            "tags": {
              "Name": "local-public-ec2-us-east-1b"
            },
            "tags_all": {
              "Name": "local-public-ec2-us-east-1b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-d61437252dafab464"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.ec2_public_subnet",
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ec2_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:internet-gateway/igw-c7d8783c",
            "id": "igw-c7d8783c",
            "owner_id": "000000000000",
            "tags": {
              "Name": "local-ec2-igw"
            },
            "tags_all": {
              "Name": "local-ec2-igw"
            },
            "vpc_id": "vpc-d2b7b506"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ec2_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-cc6ac357abf949a35",
            "connectivity_type": "public",
            "id": "nat-38509787dc5dbf99c",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-259cd3e1",
            "tags": {
              "Name": "local-ec2-nat-us-east-1a"
            },
            "tags_all": {
              "Name": "local-ec2-nat-us-east-1a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.ec2_eip",
            "aws_internet_gateway.ec2_igw",
            "aws_subnet.ec2_public_subnet",
            "aws_vpc.ec2_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-dc76c7432e5e17642",
            "connectivity_type": "public",
            "id": "nat-d5531193551d8819c",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-b1564341",
            "tags": {
              "Name": "local-ec2-nat-us-east-1b"
            },
            "tags_all": {
              "Name": "local-ec2-nat-us-east-1b"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.ec2_eip",
            "aws_internet_gateway.ec2_igw",
            "aws_subnet.ec2_public_subnet",
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ec2_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-5302af62",
            "id": "rtb-5302af62",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-38509787dc5dbf99c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "local-ec2-private-route-table-0"
            },
            "tags_all": {
              "Name": "local-ec2-private-route-table-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-d2b7b506"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.ec2_eip",
            "aws_internet_gateway.ec2_igw",
            "aws_nat_gateway.ec2_nat",
            "aws_subnet.ec2_public_subnet",
            "aws_vpc.ec2_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-bd3fa24b",
            "id": "rtb-bd3fa24b",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-d5531193551d8819c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "local-ec2-private-route-table-1"
            },
            "tags_all": {
              "Name": "local-ec2-private-route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-d2b7b506"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.ec2_eip",
            "aws_internet_gateway.ec2_igw",
            "aws_nat_gateway.ec2_nat",
            "aws_subnet.ec2_public_subnet",
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ec2_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-61be977a",
            "id": "rtb-61be977a",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-c7d8783c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "local-ec2-public-route-table"
            },
            "tags_all": {
              "Name": "local-ec2-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-d2b7b506"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ec2_igw",
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ec2_private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-f39a2e3c",
            "route_table_id": "rtb-5302af62",
            "subnet_id": "subnet-28877705"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.ec2_eip",
            "aws_internet_gateway.ec2_igw",
            "aws_nat_gateway.ec2_nat",
            "aws_route_table.ec2_private_route_table",
            "aws_subnet.ec2_private_subnet",
            "aws_subnet.ec2_public_subnet",
            "aws_vpc.ec2_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-5ba1492b",
            "route_table_id": "rtb-bd3fa24b",
            "subnet_id": "subnet-3b7a1c0f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.ec2_eip",
            "aws_internet_gateway.ec2_igw",
            "aws_nat_gateway.ec2_nat",
            "aws_route_table.ec2_private_route_table",
            "aws_subnet.ec2_private_subnet",
            "aws_subnet.ec2_public_subnet",
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ec2_public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-d7afac34",
            "route_table_id": "rtb-61be977a",
            "subnet_id": "subnet-259cd3e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ec2_igw",
            "aws_route_table.ec2_public_route_table",
            "aws_subnet.ec2_public_subnet",
            "aws_vpc.ec2_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-a11f8dcc",
            "route_table_id": "rtb-61be977a",
            "subnet_id": "subnet-b1564341"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ec2_igw",
            "aws_route_table.ec2_public_route_table",
            "aws_subnet.ec2_public_subnet",
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-d61437252dafab464",
            "description": "Allow all traffic in/out",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-d61437252dafab464",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "local-ec2-allow-all"
            },
            "tags_all": {
              "Name": "local-ec2-allow-all"
            },
            "timeouts": null,
            "vpc_id": "vpc-d2b7b506"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-07338041ebebec2e9",
            "description": "Allow all traffic from local vpc",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07338041ebebec2e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.100.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_local",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "local-ec2-allow-local"
            },
            "tags_all": {
              "Name": "local-ec2-allow-local"
            },
            "timeouts": null,
            "vpc_id": "vpc-d2b7b506"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ec2_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-28877705",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "us-east-1-az1",
            "cidr_block": "10.100.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-28877705",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "tags": {
              "Name": "local-ec2-private-subnet-0"
            },
            "tags_all": {
              "Name": "local-ec2-private-subnet-0"
            },
            "vpc_id": "vpc-d2b7b506"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ec2_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-3b7a1c0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "us-east-1-az1",
            "cidr_block": "10.100.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-3b7a1c0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "tags": {
              "Name": "local-ec2-private-subnet-1"
            },
            "tags_all": {
              "Name": "local-ec2-private-subnet-1"
            },
            "vpc_id": "vpc-d2b7b506"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ec2_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-259cd3e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "us-east-1-az1",
            "cidr_block": "10.100.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-259cd3e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000000000000",
            "tags": {
              "Name": "local-ec2-public-subnet-0"
            },
            "tags_all": {
              "Name": "local-ec2-public-subnet-0"
            },
            "vpc_id": "vpc-d2b7b506"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ec2_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-b1564341",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "us-east-1-az1",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-b1564341",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000000000000",
            "tags": {
              "Name": "local-ec2-public-subnet-1"
            },
            "tags_all": {
              "Name": "local-ec2-public-subnet-1"
            },
            "vpc_id": "vpc-d2b7b506"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ec2_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:vpc/vpc-d2b7b506",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-7b5530315519369e6",
            "default_route_table_id": "rtb-03d81af9917585472",
            "default_security_group_id": "sg-614b4d57da3a89abe",
            "dhcp_options_id": "dopt-default",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-d2b7b506",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03d81af9917585472",
            "owner_id": "000000000000",
            "tags": {
              "Name": "local-ec2-vpc"
            },
            "tags_all": {
              "Name": "local-ec2-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}